--- a/src/main/resources/templates/carrito/create.html
+++ b/src/main/resources/templates/carrito/create.html
@@ -6,13 +6,13 @@
 <div class="container h-100">
     <div class="electroplus__items py-4 d-flex flex-column h-100">
         <div class="d-flex justify-content-between border-bottom pb-2">
-            <label class="electroplus__items_title" style="font-weight: 900"
-            >CARRITO DE COMPRAS</label>
+            <label class="electroplus__items_title" style="font-weight: 900">CARRITO DE COMPRAS</label>
 
         </div>
         <!--        no-gutters-->
         <div class="row no-gutters items">
-            <div class="col-6 col-sm-4 col-md-3 px-2 item" th:each="carrito : ${carritos}">
+            <div class="col-12 col-sm-4 col-md-3 px-2 item" th:each="carrito : ${carritos}"
+                 th:if="${carritos.size()>0}">
                 <div class="card border-0" style="min-height: 100% !important;">
                     <div class="d-flex justify-content-center">
                         <div class="card-imagen">
@@ -24,7 +24,8 @@
                             th:text="${carrito.producto.nombre}"></h5>
                         <p class="card-text item-descripcion text-truncate-2 pb-1"
                            th:text="${carrito.producto.descripcion}"></p>
-                        <p class="item-descuento border-top pt-1" style="text-decoration: none" th:text="'PRECIO: S/. ' + ${carrito.producto.precio}"></p>
+                        <p class="item-descuento border-top pt-1" style="text-decoration: none"
+                           th:text="'PRECIO: S/. ' + ${carrito.producto.precio}"></p>
                         <p class="item-precio pb-1 mb-0" th:text="'TOTAL : S/. ' + ${carrito.precio}"></p>
                         <div class="py-1 border-top">
                             <form th:object="${carrito}">
@@ -51,19 +52,26 @@
                     </div>
                 </div>
             </div>
+            <div th:if="${carritos.size()==0}" class="col-12">
+                <div class="d-flex justify-content-center w-100 h-100 bg-white py-4">
+                    <img th:src="@{/image/carrito-vacio.png}" alt="NOT FOUND" height="200">
+                </div>
+            </div>
         </div>
         <div class="mt-auto w-100 electroplus__navbar fixed-bottom py-2">
             <div class="d-flex justify-content-between align-items-center container">
                 <div class="px-3">
                     <p class="text-one-70 text-white mb-0">Total</p>
-                    <small class="electroplus__cabecera_title text-one text-white" id="totale" th:text="'S/. ' +${total}"></small>
+                    <small class="electroplus__cabecera_title text-one text-white" id="totale"
+                           th:text="'S/. ' +${total}">
+                    </small>
                 </div>
                 <div>
                     <a href="/inicio" class="btn btn-secondary btn-block" type="submit"
                        style="margin: 8px">
                         Agregar productos
                     </a>
-                    <a th:href="@{/pago}" class="btn btn-success btn-block" type="submit"
+                    <a th:href="@{/pago}" th:if="${carritos.size() > 0}" class="btn btn-success btn-block" type="submit"
                        style="margin: 8px" th:disabled="${carritos.size() == 0}">
                         Finalizar Compra
                     </a>
