--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -8,7 +8,7 @@
         <div class="col-12 py-4">
             <div class="electroplus__cabecera p-2" style="background-color: #E5E7ED">
                 <div class="d-inline-flex align-items-center justify-content-between w-100 flex-wrap">
-                    <div class="text-one electroplus__cabecera_title">DASHBOARD</div>
+                    <div class="text-one electroplus__cabecera_title">Dashboard</div>
                     <div class="d-inline-flex align-items-center">
                         <!--form th:object="${filtro}" th:action="@{/pedidos}"
                               class="d-inline-flex align-items-center pr-2">
@@ -29,7 +29,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 py-4">
+        <div class="col-12">
             <div id="chart_div"></div>
         </div>
     </div>
