fix generación pdf

--- a/src/main/resources/templates/fragment/fragment.html
+++ b/src/main/resources/templates/fragment/fragment.html
@@ -27,6 +27,7 @@
     <script th:src="@{/webjars/bootstrap-datepicker/js/bootstrap-datepicker.min.js}"></script>
     <script th:src="@{/webjars/jquery.inputmask/jquery.inputmask.min.js}"></script>
     <script th:src="@{/js/validator.js}"></script>
+    <script type="application/javascript" src="https://raw.githack.com/eKoopmans/html2pdf/master/dist/html2pdf.bundle.js"></script>
 </head>
 
 <body class="electroplus">
