--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
                 <div class="form-group">
                     <label for="username" class="form-label">Correo Electronico:</label>
                     <input type="email" name="username" class="form-control" id="username"
-                           placeholder="Ingrese email" value="figueroa@gmail.com" required>
+                           placeholder="Ingrese email" value="" required>
                     <div class="invalid-feedback mt-0">Este campo es obligatorio</div>
                 </div>
             </div>
@@ -30,7 +30,7 @@
                 <div class="form-group">
                     <label for="password" class="form-label">Contraseña:</label>
                     <input type="password" name="password" class="form-control" id="password"
-                           placeholder="Ingrese Contraseña" value="12345" required>
+                           placeholder="Ingrese Contraseña" value="" required>
                     <div class="invalid-feedback mt-0">Este campo es obligatorio</div>
                 </div>
             </div>
